# my-assistant

./: .gitignore  README.md  pyproject.toml  weather.py
app/: main.py
app/api/: chat.py  weather.py
app/api/routes/: chat.py  rag.py
app/core/: config.py
app/mcp/: __init__.py  client.py  server.py
app/models/: chat.py  tool.py  weather.py
app/prompts/: system.py  tool_result.py
app/services/: agent.py  llm.py  memory.py  planner.py  rag.py  tracing.py  weather.py
app/tools/: calculator.py  decide.py  execute_tool.py  function_calling.py  rag.py  weather.py  weather_tool.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  style.css
scripts/: eval_agent.py  eval_trajectory.py  show_trace.py
